--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,19 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-primary">
-  <a class="navbar-brand" href="#">Navbar</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
+     
       <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
+        <a class="nav-link" href="#">Employee List</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
+     
     </ul>
   </div>
 </nav>
-  <div style="text-align: center;">
+  <div style="text-align: center; margin-top:30px;">
     <h1>CRUD with Angular and Spring Boot</h1>
 
     <app-employee-list></app-employee-list>
@@ -91,8 +84,8 @@
   
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      © 2020 Copyright:
-      <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+      © 2020 Copyright: Dastur IT Solutions
+      <a class="text-white" href="https://mdbootstrap.com/">ozy.dastur@gmail.com</a>
     </div>
     <!-- Copyright -->
   </footer>
