--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
   
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -7,18 +7,24 @@
     <ul class="navbar-nav">
      
       <li class="nav-item">
-        <a class="nav-link" href="#">Employee List</a>
+        <a class="nav-link" routerLink="employees" routerLinkActive="active"><h6> Employee List</h6></a>
       </li>
-     
+      <li class="nav-item">
+        <a class="nav-link" routerLink="create-employee" routerLinkActive="active"><h6> Add Employee</h6></a>
+      </li>
+
     </ul>
   </div>
 </nav>
-  <div style="text-align: center; margin-top:30px;">
-    <h1>CRUD with Angular and Spring Boot</h1>
-
-    <app-employee-list></app-employee-list>
-    <router-outlet></router-outlet>
+  
+  <div class="container" style="text-align: center; margin-top:30px; width: 50%;">
+    <h1 >CRUD with Angular and Spring Boot</h1>
+  
+  
   </div>
+  
+  <router-outlet></router-outlet>
+
    <!-- footer begins here -->
    <footer class="bg-light text-center text-white fixed-bottom">
     <!-- Grid container -->
