--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -1,17 +1,29 @@
-<div class="container">
+<div class="container" style="width: 50%;">
+  
+    <div *ngIf="!isDeleted" class="alert alert-light"></div>
+    <div *ngIf="isDeleted" class="alert alert-danger">{{message}}</div>
     <table class="table table-striped" style="text-align: center;">
         <thead>
             <tr>
+                <th>Id</th>
                 <th>First Name</th>
                 <th>Last Name</th>
                 <th>Email Address</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
             <tr *ngFor="let employee of employees">
+                <td>{{employee.id}}</td>
                 <td>{{employee.firstName}}</td>
                 <td>{{employee.lastName}}</td>
                 <td>{{employee.emailAddress}}</td>
+                <td>
+                    <button  (click)="deleteEmployee(employee.id)" class="btn btn-danger" > <i class="fas fa-trash-alt"></i>&nbsp;Delete</button>
+                        &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;
+
+                    <button type="button" class="btn btn-primary"><i class="fas fa-pen"> </i>&nbsp;Edit</button>
+                </td>
             </tr>
         </tbody>
 
