--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,10 +7,10 @@
     <ul class="navbar-nav">
      
       <li class="nav-item">
-        <a class="nav-link" routerLink="employees" routerLinkActive="active"><h6> Employee List</h6></a>
+       <a class="nav-link" routerLink="employees" routerLinkActive="active"> <button class="btn btn-success">View Employee List</button></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="create-employee" routerLinkActive="active"><h6> Add Employee</h6></a>
+        <a class="nav-link" routerLink="create-employee" routerLinkActive="active"><button class="btn btn-secondary">Add Employee</button></a>
       </li>
 
     </ul>
@@ -18,8 +18,8 @@
 </nav>
   
   <div class="container" style="text-align: center; margin-top:30px; width: 50%;">
-    <h1 >CRUD with Angular and Spring Boot</h1>
-  
+    <h1 >{{title}}</h1>
+ 
   
   </div>
   
