--- a/src/app/create-employee/create-employee.component.html
+++ b/src/app/create-employee/create-employee.component.html
@@ -1,24 +1,25 @@
 
-<div class="container" style="width:50%; margin-top:50px;">
+<div class="container" style="width:70%; margin-top:50px; border:solid black 1px; padding:30px;">
     <h3>Create Employee</h3>
+    
     <form >
 
       
         <div class="form-group">
             <label for="firstName">First Name</label>
-            <input class="form-control"  type="text" id="firstName">
+            <input class="form-control" [(ngModel)]="employee.firstName" type="text" name="firstName" id="firstName">
         </div>
         <div class="form-group">
             <label for="lastName">Last Name</label>
-            <input  id="lastName"  type="text" class="form-control">
+            <input [(ngModel)]="employee.lastName" name="lastName" id="lastName"  type="text" class="form-control">
         </div>
         <div class="form-group">
             <label for="emailAddress">Email</label>
-            <input class="form-control"  type="text"  id="emailAddress">
+            <input class="form-control" [(ngModel)]="employee.emailAddress" type="text" name="emailAddress" id="emailAddress">
         </div>
        
         <br>
-            <button class="btn btn-success">Add Employee</button>
+            <button (click)="createEmployee()" type="submit" name="submit" class="btn btn-success">Add Employee</button>
         
         
 
