--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -1,9 +1,11 @@
-<div class="container" style="width: 50%;">
+<div class="container" style="width: 50%; ">
   
+
     <div *ngIf="!isDeleted" class="alert alert-light"></div>
-    <div *ngIf="isDeleted" class="alert alert-danger">{{message}}</div>
-    <table class="table table-striped" style="text-align: center;">
-        <thead>
+    <div *ngIf="isDeleted" class="alert alert-danger">{{deletedMessage}}</div>
+
+    <table class="table table-striped table-bordered" style="text-align: center; border:solid black 1px; padding:30px;">
+        <thead class="thead-dark">
             <tr>
                 <th>Id</th>
                 <th>First Name</th>
@@ -19,11 +21,16 @@
                 <td>{{employee.lastName}}</td>
                 <td>{{employee.emailAddress}}</td>
                 <td>
-                    <button  (click)="deleteEmployee(employee.id)" class="btn btn-danger" > <i class="fas fa-trash-alt"></i>&nbsp;Delete</button>
-                        &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;
+                        
 
-                    <button type="button" class="btn btn-primary"><i class="fas fa-pen"> </i>&nbsp;Edit</button>
-                </td>
+                        <button class="btn btn-primary"><a routerLink="/update-employee/{{employee.id}}" style="color:white; text-decoration: none;"><i class="fas fa-pen"> </i>&nbsp;Edit</a></button>
+                        &nbsp; &nbsp; &nbsp;
+
+                        <button routerLink="/employee-info/{{employee.id}}"  type="button" class="btn btn-info"><i class="fas fa-info"></i>&nbsp;Data</button>
+                        &nbsp; &nbsp; &nbsp;
+                        <button  (click)="deleteEmployee(employee.id)" class="btn btn-danger" style="color: white;" > <i class="fas fa-trash-alt"></i>&nbsp;Delete</button>
+
+                    </td>
             </tr>
         </tbody>
 
