Completed CRUD Operations

--- a/src/app/employee-info/employee-info.component.html
+++ b/src/app/employee-info/employee-info.component.html
@@ -1,7 +1,7 @@
-<div class="container" style="width: 50%; border: 1px solid #000; margin-top:50px; padding: 30px;">
+<div class="container" style="width: 70%; border: 1px solid #000; margin-top:50px; padding: 30px; background-color: lavender;">
 
     <h3 >Employee Information</h3>
-    <table class="table table-info table-bordered">
+    <table class="table table-light table-bordered" style="color: mediumblue;">
         <tbody>
         <tr>
             <th>Id</th>
