--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+<nav class="navbar navbar-expand-sm navbar-dark bg-primary">
   
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -7,17 +7,17 @@
     <ul class="navbar-nav">
      
       <li class="nav-item">
-       <a class="nav-link" routerLink="employees" routerLinkActive="active"> <button class="btn btn-success">View Employee List</button></a>
+       <a class="nav-link" routerLink="employees" routerLinkActive="active"> <button class="btn btn-success" style="background-color: lavender; color:black;">View Employee List</button></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="create-employee" routerLinkActive="active"><button class="btn btn-secondary">Add Employee</button></a>
+        <a class="nav-link" routerLink="create-employee" routerLinkActive="active"><button class="btn btn-light " style="color: black; background-color: lavender;">Add Employee</button></a>
       </li>
 
     </ul>
   </div>
 </nav>
   
-  <div class="container" style="text-align: center; margin-top:30px; width: 50%;">
+  <div class="container" style="text-align: center; margin-top:30px; width: 70%; border:solid black 1px; ">
     <h1 >{{title}}</h1>
  
   
