--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -1,17 +1,24 @@
-<div class="container" style="width: 50%; ">
+<div class="container" style="width: 70%; ">
   
-
+   
     <div *ngIf="!isDeleted" class="alert alert-light"></div>
     <div *ngIf="isDeleted" class="alert alert-danger">{{deletedMessage}}</div>
-
-    <table class="table table-striped table-bordered" style="text-align: center; border:solid black 1px; padding:30px;">
+    
+    <form style="margin-bottom:20px; background-color: lavender; border-radius: 4px;">
+        <div class="form-group" style="padding: 5px;">
+            <label for="filter" style="margin-right:20px;"><strong><h5>Filter:</h5></strong></label>
+            <input  type="text" id="filter">
+        </div>
+    </form>
+    <table class="table table-striped table-bordered" style="text-align: center;  padding:30px;">
+        
         <thead class="thead-dark">
             <tr>
-                <th>Id</th>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Email Address</th>
-                <th>Actions</th>
+                <th><h5>Id</h5></th>
+                <th><h5>First Name</h5></th>
+                <th><h5>Last Name</h5></th>
+                <th><h5>Email Address</h5></th>
+                <th><h5>Actions</h5></th>
             </tr>
         </thead>
         <tbody>
