Formatted the background of the forms

--- a/src/app/create-employee/create-employee.component.html
+++ b/src/app/create-employee/create-employee.component.html
@@ -1,5 +1,5 @@
 
-<div class="container" style="width:70%; margin-top:50px; border:solid black 1px; padding:30px; background-color: lavender;">
+<div class="container" style="width:70%; margin-top:50px; border:solid black 1px; padding:30px; background-color: rgb(245, 244, 244);">
     <h3>Create Employee</h3>
     
     <form >
