--- a/src/app/employee-info/employee-info.component.html
+++ b/src/app/employee-info/employee-info.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="width: 70%; border: 1px solid #000; margin-top:50px; padding: 30px; background-color: lavender;">
+<div class="container" style="width: 70%; border: 1px solid #000; margin-top:50px; padding: 30px; background-color: rgb(245, 244, 244)">
 
     <h3 >Employee Information</h3>
     <table class="table table-light table-bordered" style="color: mediumblue;">
