--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -6,8 +6,8 @@
     
     <form style="margin-bottom:20px; background-color: lavender; border-radius: 4px;">
         <div class="form-group" style="padding: 5px;">
-            <label for="filter" style="margin-right:20px;"><strong><h5>Filter:</h5></strong></label>
-            <input  type="text" id="filter">
+            <label style="margin-right:20px;">Filter:</label>
+            <input  type="text" >
         </div>
     </form>
     <table class="table table-striped table-bordered" style="text-align: center;  padding:30px;">
