--- a/src/app/update-employee/update-employee.component.html
+++ b/src/app/update-employee/update-employee.component.html
@@ -1,5 +1,5 @@
 
-<div class="container" style="width: 70%; border: 1px solid #000; margin-top:50px; padding:30px; background-color: lavender;">
+<div class="container" style="width: 70%; border: 1px solid #000; margin-top:50px; padding:30px; background-color: rgb(245, 244, 244)">
     <h3>Update Employee</h3>
     <form >
 
